--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ header .nav-info-button {
   padding: 0 1.5em;
 }
 
-
 .homepage .services {
   font-family: NotoSansTC;
   padding: 140px 0;
@@ -353,7 +352,7 @@ header .nav-info-button {
   }
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 575.98px) {
   .homepage .services .services-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -489,7 +488,7 @@ header .nav-info-button {
   margin: 20px;
 }
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 575.98px) {
   .homepage .services .service-section-sp {
     display: none;
   }
@@ -547,25 +546,12 @@ header .nav-info-button {
   margin: 0;
 }
 
-.homepage .news-section .top-news p span {
-  font-size: 12px;
-  border-radius: 30.5px;
-  color: white;
-  padding: 1px 10px;
-  margin: 0 15px;
-}
-
 .homepage .news-section .top-news a:hover {
   text-decoration: blink;
 }
 
-.homepage .news-section .top-news a:hover .post-title {
+.homepage .news-section .top-news .post-title:hover {
   color: #2ca6e0;
-  background: #f4f4f5;
-}
-
-.homepage .news-section .top-news a:hover .post-infomation {
-  background: #f4f4f5;
 }
 
 .homepage .news-section .top-news .post-title {
@@ -596,16 +582,29 @@ header .nav-info-button {
   color: #212426;
 }
 
-.homepage .news-section .top-news .post-category span.news {
+.homepage .news-section .top-news .post-category a {
+  font-size: 12px;
+  border-radius: 30.5px;
+  color: white;
+  padding: 1px 10px;
+  margin: 0 15px;
+}
+
+.homepage .news-section .top-news .post-category a[href*="/event"] {
   background-color: #2ca6e0;
 }
 
-.homepage .news-section .top-news .post-category span.ad {
+.homepage .news-section .top-news .post-category a[href*="/news"] {
   background-color: #d80b17;
 }
 
 .homepage .news-section .top-news .post-category span.update {
   background-color: #f9db02;
+}
+
+.homepage .news-section .top-news:hover {
+  color: #2ca6e0;
+  background: #f4f4f5;
 }
 
 @media (max-width: 767.98px) {
