--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ input, select {
   display: none;
 }
 
+header {
+  height: 80px;
+}
+
 header.shadow {
   -webkit-box-shadow: 0 0 10px 0 rgba(48, 51, 62, 0.2), 0 0 0 0 rgba(48, 51, 62, 0.1);
           box-shadow: 0 0 10px 0 rgba(48, 51, 62, 0.2), 0 0 0 0 rgba(48, 51, 62, 0.1);
@@ -154,6 +158,7 @@ header .show .dropdown-menu.show {
 }
 
 header .show .dropdown-menu.show input {
+  width: 970px;
   height: 34px;
   border: unset;
   border-bottom: 1px solid #f4f4f5;
@@ -221,8 +226,9 @@ header .navbar {
       -ms-flex-pack: center;
           justify-content: center;
   padding: unset;
-  width: 100%;
   position: fixed;
+  right: 0;
+  left: 0;
   z-index: 1;
   margin: 0 auto;
   height: 80px;
@@ -276,6 +282,10 @@ header .navbar .nav-header .navbar-collapse ul.navbar-nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+header .navbar .nav-header .navbar-collapse ul.navbar-nav ul.tb-sns img {
+  width: 34px;
 }
 
 header .navbar .nav-header .navbar-collapse ul.navbar-nav .nav-item.news > a {
