--- a/style.css
+++ b/style.css
@@ -1843,4 +1843,32 @@ footer small {
     margin: 0;
   }
 }
+
+#arrow_top {
+  position: fixed;
+  bottom: 348px;
+  right: 105px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 3px 8px 0 rgba(40, 40, 40, 0.3), 0 3px 4px 0 rgba(40, 40, 40, 0.41);
+          box-shadow: 0 3px 8px 0 rgba(40, 40, 40, 0.3), 0 3px 4px 0 rgba(40, 40, 40, 0.41);
+  background-color: #2ca6e0;
+}
+
+#arrow_top img.btn_arrow_top {
+  width: 32px;
+  height: 32px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 /*# sourceMappingURL=style.css.map */
