--- a/style.css
+++ b/style.css
@@ -140,17 +140,7 @@ header .nav-info-button {
   margin-left: 12%;
 }
 
-.homepage .top_about .top_about::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.homepage .top_about .about-title > h1 {
+.homepage .top_about .about-title h1 {
   font-size: 30px;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
@@ -160,7 +150,7 @@ header .nav-info-button {
   line-height: 1.4;
   margin-right: 30px;
   margin-left: 100px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .homepage .top_about .container {
@@ -170,13 +160,13 @@ header .nav-info-button {
 }
 
 .homepage .top_about .about-text h3 {
-  margin-top: 50px;
+  margin-top: 30px;
   font-size: 16px;
 }
 
 .homepage .top_about .about-text p {
   font-size: 14px;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .homepage .top_about .about-text a.btn {
@@ -189,7 +179,14 @@ header .nav-info-button {
 }
 
 .homepage .top_about .about-text a.btn .mgr-20 {
-  margin-right: 40px;
+  margin-right: 20px;
+}
+
+@media screen and (max-width: 1025px) {
+  .homepage .top_about {
+    height: 100vh;
+    background-size: cover;
+  }
 }
 
 .homepage .services .services-container {
