--- a/home/_contact.scss
+++ b/home/_contact.scss
@@ -1,11 +1,12 @@
-p{
-    margin: 0;
-}
-h3{
-    margin: 0;
-}
 
 .contact{
+    p{
+        margin: 0;
+    }
+    h3{
+        margin: 0;
+    }
+    
     width: 100%;
     margin: 0 auto;
     padding-left: 7%;
@@ -16,17 +17,16 @@ h3{
         top: 10%;
         left: 8%;
         margin-bottom: 10px;
-        
         h3{
             font-weight: 500;
             font-size: 30px;
             padding-bottom: 53px;
+            letter-spacing: 2.5px;
         }
-        
         .contact-text-detail{
             font-size: 16px;
+            letter-spacing: 1px;
         }
-        
     }
     img{
         width: 100%;
